@@ -27,6 +27,6 @@
 void    update_triggers (int itemid);
 int	process_data(int sockfd,char *server,char *key, char *value,char *lastlogsize,char *timestamp,
 			char *source, char *severity);
-void	process_new_value(DB_ITEM *item,char *value,int *update_triggers);
+void	process_new_value(DB_ITEM *item,char *value);
 
 #endif
